welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:30: error: Unmatched closing brace '}' ignored here
}
^